--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>AirBnB Clone</title>
@@ -8,7 +8,7 @@
 		<header style="width: 100%; background-color: #FF0000; height: 70px">
 		</header>
 		<footer style="position: fixed; bottom: 0; width: 100%; background-color: #00FF00; height: 60px">
-			<p style="text-align: center; margin: 20px">
+			<p style="text-align: center;">
 				  Best School
 			</p>
 		</footer>
